--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,16 @@
     <script src="aggregation.controller.js"></script>
 
 
+
     <style>
+
+        ul
+        {
+            list-style-type: none;
+        }
         #icon{
             color:red;
+
 
         }
 
@@ -38,14 +45,15 @@
 
 
         .user{
-            font-size:16px;
+            font-size:12px;
 
 
         }
 
         #tit{
-            font-weight: bold;
-            font-size: 18px;
+            font-weight: bolder;
+            font-size: 16px;
+            color: #337ab7;
         }
 
         .custom {
@@ -60,22 +68,46 @@
 
         .functions,.content{
             margin-top: 50px;
+            margin-bottom:50px;
+
         }
 
 
 
-
+        .boxed{
+            border: 0px solid #ccc;
+            margin-top: 10px;
+            background-color: #f5f5f5;
+        }
 
         .meta-content{
             font-size:18px;
             cursor:pointer;
-            color: #3c8dbc;
+            color:  #337ab7;
+
+        }
+        .meta-content:hover{
             text-decoration: underline;
         }
-
         .description{
             color: #337ab7;
             font-weight: bold;
+            font-size:16px;
+        }
+        .username{
+            font-size:14px;
+            font-weight: bold;
+            color:#337ab7;
+            margin-left: 10px;
+        }
+
+        .tags{
+            margin-bottom: 10px;
+            margin-top:10px;
+        }
+
+        .cmt{
+            margin-top:10px;
         }
     </style>
 
@@ -88,8 +120,9 @@
 <div class="container-fluid">
     <div class="row functions">
         <!--add link-->
-        <div class=" col-xs-offset-10 col-md-11 ">
-            <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#Addlink"> Add a link</button>
+        <div class=" col-xs-offset-1 col-md-10">
+            <input type="text" name="search" placeholder="Search by tags or text" ng-model="query">
+            <button class="btn btn-primary pull-right" type="button" data-toggle="modal" data-target="#Addlink"> Add a link</button>
         </div>
     </div>
 
@@ -128,6 +161,13 @@
                                 <span class="help-block"></span>
                             </div>
 
+                            <div id="tag-group" class="form-group">
+                                <label for="url">Tags</label>
+                                <input type="text" rows="3" name="tags" id="tags" class="form-control" placeholder="Add theTags seperated by commas" ng-model="tags">
+                                <span class="help-block"></span>
+
+                            </div>
+
                             <button type="button" class="btn btn-primary" ng-disabled="added" ng-click="addlink()" >Add
 
                             </button>
@@ -157,8 +197,8 @@
 
 <div class="container fluid" ng-show="posts.length>0">
     <div class="row">
-        <div class="col-xs-11" id="LinksList">
-           <ul ng-repeat="post in posts">
+        <div class="col-md-10" id="LinksList" ng-controller="commentsController">
+           <ul ng-repeat="post in posts| filter: query">
                <li>
                    <div class="panel panel-default">
                        <div class="panel-heading">
@@ -184,8 +224,8 @@
 
                                </div>
                                <div class="col-md-5 hidden-md hidden-sm hidden-xs">
-                                   <h4 class="description">Description</h4>
-                                   {{post.description}}
+                                   <div class="description">Description</div>
+                                   <p class="text-justify">{{post.description}}</p>
                                </div>
                            </div>
                        </div>
@@ -193,24 +233,28 @@
                        <div class="panel-footer">
 
 
-                           <span class="commentToggle meta-content" id="{{'c'+post.postId}}" onclick="alert(this.id)">comments</span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="meta-content" id="{{'tags-'+post.postId+'d'}}" onclick="tagsclick(this.id)">2 tags</span>
+                           <span class="commentToggle meta-content" id="{{'c'+post.postId}}" onclick="commentsclick(this.id)">comments</span>&nbsp;<span class="badge">{{post.comments.length}}</span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="meta-content" id="{{'t'+post.postId}}" onclick="tagsclick(this.id)">tags</span>&nbsp;<span class="badge">{{post.tags.length}}</span>
                            <div id="{{'c'+post.postId+'d'}}" class="comments">
-                               <ul class="list-group">
-                                   <li class="list-group item">
-                                       <div class="input-group">
-                                           <input type="text" class="form-control" placeholder="Add a comment...">
+                                    <div class="input-group cmt">
+                                        <input type="text" ng-model="content" class="form-control" placeholder="Add a comment...">
                                                         <span class="input-group-btn">
-                                                             <button type="button" class="btn btn-default">Comment</button>
+                                                             <button type="button" class="btn btn-default" ng-click="addComment(post)">Comment</button>
                                                         </span>
-                                       </div>
-                                   </li>
-                                   <li class="list-group-item">Cras justo odio</li>
-                                   <li class="list-group-item">Dapibus ac facilisis in</li>
-                               </ul>
+                                    </div>
+
+                                    <div ng-repeat="com in post.comments" class="boxed">
+                                        <span class="username">{{com.userId}}</span> &nbsp;<span contenteditable="true">{{com.comment}}</span><br>
+                                        <span>edit</span>
+
+
+                                    </div>
                            </div>
                            <div id="{{'t'+post.postId+'d'}}" class="tags">
-                               <span class=" label label-default">Mundasupatti</span>
-                               <span class=" label label-default">Comedy</span>
+                               <span ng-repeat="tag in post.tags">
+                                   <span class=" label label-primary">{{tag}}</span>
+                               </span>
+
+
                            </div>
                        </div>
                        </div>
@@ -225,15 +269,16 @@
 
     $('.comments').hide();
     $('.tags').hide();
-    function commentsclick(clicked){
+    function commentsclick(id){
 
-        var _id="#"+clicked+" .comments";
+        var _id="#"+id+"d.comments";
         console.log(_id);
         $(_id).slideToggle();
     }
     function tagsclick(id){
-        console.log(id);
-        //$(id).slideToggle();
+        var _id="#"+id+"d.tags";
+        console.log(_id);
+        $(_id).slideToggle();
     }
 
 </script>
@@ -242,6 +287,9 @@
 </div>
 </body>
 </html>
+
+
+
 
 
 
