--- a/public/test.html
+++ b/public/test.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-<body>
 <body>
 <div>
 
-    <div id="pd_rating_holder_39"></div><script type="text/javascript">PDRTJS_settings_39 = {"id":39,"unique_id":"default","title":"","permalink":""};</script><script type="text/javascript" src="http://i0.poll.fm/js/rating/rating.js"></script>
 
 
+<div class="container">
+
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="col-xs-12">
+                <div class="col-lg-7"><iframe src="https://embed-ssl.ted.com/talks/linus_torvalds_the_mind_behind_linux.html" width="100%" height="300"></iframe></div><div class="col-md-5 hidden-md hidden-sm hidden-xs"><div class="description">Description</div><p class="text-justify">Linus Torvalds transformed technology twice -- first with the Linux kernel, which helps power the Internet, and again with Git, the source code management system used by developers worldwide. In a rare interview with TED Curator Chris Anderson, Torvalds discusses with remarkable openness the personality traits that prompted his unique philosophy of work, engineering and life. "I am not a visionary, I\'m an engineer," Torvalds says. "I\'m perfectly happy with all the people who are walking around and just staring at the clouds ... but I\'m looking at the ground, and I want to fix the pothole that\'s right in front of me before I fall in."</p></div>
+        </div>
+    </div>
+</div>
 
 </div>
 
