--- a/public/test.html
+++ b/public/test.html
@@ -17,12 +17,7 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-xs-12">
-            <div class="col-xs-12">
-                <div class="col-lg-7"><iframe src="https://embed-ssl.ted.com/talks/linus_torvalds_the_mind_behind_linux.html" width="100%" height="300"></iframe></div><div class="col-md-5 hidden-md hidden-sm hidden-xs"><div class="description">Description</div><p class="text-justify">Linus Torvalds transformed technology twice -- first with the Linux kernel, which helps power the Internet, and again with Git, the source code management system used by developers worldwide. In a rare interview with TED Curator Chris Anderson, Torvalds discusses with remarkable openness the personality traits that prompted his unique philosophy of work, engineering and life. "I am not a visionary, I\'m an engineer," Torvalds says. "I\'m perfectly happy with all the people who are walking around and just staring at the clouds ... but I\'m looking at the ground, and I want to fix the pothole that\'s right in front of me before I fall in."</p></div>
-        </div>
-    </div>
-</div>
+        <div class="col-xs-12"><iframe class="chartblocks-embed" src="//embed.chartblocks.com/1.0/?c=5709a41d9973d2a07742b96e&t=98b21de61f34144" height="450" width="800" frameborder="0"></iframe></div>
 
 </div>
 
