video refactored and tested

--- a/public/test.html
+++ b/public/test.html
@@ -16,14 +16,16 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-xs-12 pull-left text-left"><img src="https://www.carolus-thermen.de/favicon.ico" width="16px" height="16px">&nbsp;<span class="link_name">carolus-thermen.de</span><p>Harmonizing body and soul is becoming more and more important for most people. In this context, rest and relaxation and the regular distance from the everyday life matter more and more. The Carolus Thermen Bad Aachen with their four worlds of relaxation offer unique possibilities of letting yourself go for a few hours. Let us entice you to discover our world of silence and relaxation on the next pages.</p><p> Read this on <span><a href="https://www.carolus-thermen.de/go/verwoehnwelt-carolus_spa/english.html">carolus-thermen.de</a></span></p></div>
+        <div class="col-xs-12"><div class="col-xs-6"><a href="https://drive.google.com/viewerng/viewer?url=https://www.researchgate.net/profile/Pierre_Dissaux/publication/238639330_AADL_Behavioural_Annex/links/555b382808ae6fd2d829af95.pdf&embedded=true"><img src="https:drive.google.com//viewerng/thumb?ds=AON1mFyKB657Lpc_iCPEe-64cboybQ604JqgU_ZD8LkAq43_fy8oEQ2AeZbHHrBQorviYTSR-PtKzMuJM3HabogAmLqV0_U1kzz2eH-YVZy5nyuJAqpIDR3W9qzo3C3TArvDY9TPDMPNu_WEcwV87AqwLWz0wMYWTtwfw0fJ6__gwJMQpi0ZYqUNf_wmtkcA79i92L2p802eRHI1bfndWN5h5x38qby4stbeePVBma_83Sexhh0DJGoZU5ghaRukYsxDU5klSTr8lsBhvews2hplSjoA2DrbXgF-kK1gV_EINh94VhHpFPeqnFPTeCPTMtO1kchvBBaNWPJ3fiFUngmkR2LaqEvMceb-7Pb5rqkK__6cVO7O0SYGF32Ul959HnzY8Hs4NNDT&ck=lantern&w=800&p=proj"height="500px" width="100%"></a></div><div class="col-xs-6"><iframe src="https://drive.google.com/viewerng/viewer?url=https://www.researchgate.net/profile/Pierre_Dissaux/publication/238639330_AADL_Behavioural_Annex/links/555b382808ae6fd2d829af95.pdf&embedded=true"height="500px" width="100%"></iframe></div></div>
+
 
     </div>
 
 
+
 </div>
-</div>
-    </div>
+
+
 
 </body>
 
