--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./admin/css/AdminLTE.min.css">
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-sanitize.min.js"></script>
@@ -20,115 +23,21 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- angular-->
     <script src="aggregation.controller.js"></script>
-
-
-
-    <style>
-
-        ul
-        {
-            list-style-type: none;
-        }
-        #icon{
-            color:red;
-
-
-        }
-
-        #load{
-            color:white;
-        }
-
-        .table>tbody>tr>td{
-            border-top:none;
-        }
-
-
-        .user{
-            font-size:12px;
-
-
-        }
-
-        #tit{
-            font-weight: bolder;
-            font-size: 16px;
-            color: #337ab7;
-        }
-
-        .custom {
-            width: 5%;
-            padding-right: 10px;
-            padding-top: 5px;
-            margin-left: 5px;
-            align-content: center;
-
-
-        }
-        .link_name{
-            color: #337ab7;
-            font-weight: bolder;
-        }
-
-        .functions,.content{
-            margin-top: 50px;
-            margin-bottom:50px;
-
-        }
-
-
-
-        .boxed{
-            border: 0px solid #ccc;
-            margin-top: 10px;
-            background-color: #f5f5f5;
-        }
-
-        .meta-content{
-            font-size:18px;
-            cursor:pointer;
-            color:  #337ab7;
-
-        }
-        .meta-content:hover{
-            text-decoration: underline;
-        }
-        .description{
-            color: #337ab7;
-            font-weight: bold;
-            font-size:16px;
-        }
-        .username{
-            font-size:14px;
-            font-weight: bold;
-            color:#337ab7;
-            margin-left: 10px;
-        }
-
-        .tags{
-            margin-bottom: 10px;
-            margin-top:10px;
-        }
-
-        .cmt{
-            margin-top:10px;
-        }
-    </style>
-
-
-
+    <script src="./admin/js/app.min.js"></script>
 
 </head>
 <body ng-app="aggregation" ng-controller="aggregationController" data-ng-init="init()">
-<!-- top-level functions-->
+<!-- Container top-level functions-->
 <div class="container-fluid">
     <div class="row functions">
-        <!--add link-->
         <div class=" col-xs-offset-1 col-md-10">
             <input type="text" name="search" placeholder="Search by tags or text" ng-model="query">
             <button class="btn btn-primary pull-right" type="button" data-toggle="modal" data-target="#Addlink"> Add a link</button>
         </div>
     </div>
+</div>
+<!-- end of  top-level functions container-->
+
 
 
     <!-- Add link model-->
@@ -137,72 +46,79 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title" id="addlinktitle">Add new link</h4>
-
                 </div>
-
+                <!-- End of modal header-->
                 <div class="modal-body">
-                    <form ng-submit="scrapelink()">
-                        <div id="url-group" class="form-group">
-                            <label for="url">Paste url</label>
-                            <input type="url" name="url" id="url" class="form-control" placeholder="url" ng-model="formData.url">
-                            <span class="help-block"></span>
+                    <!-- form for submitting the URL -->
+                    <form  name="aggregateUrl"  ng-submit="scrapelink(aggregateUrl.$valid,aggregateUrl)" novalidate>
+                        <!-- url -->
+                        <div id="url-group" class="form-group" ng-class="{'has-error' :(aggregateUrl.url.$invalid && !aggregateUrl.url.$pristine)|| linkInvalid}">
+                            <label for="url">Paste url*</label>
+                            <input type="url" name="url" id="url" class="form-control" placeholder="url" onchange="linkInvalid=false" ng-model="formData.url" required>
+                            <span ng-show="(aggregateUrl.url.$invalid && !aggregateUrl.url.$pristine) || linkInvalid" class="help-block"> Valid URL is required!</span>
                         </div>
-
-                        <button type="submit" class="btn btn-primary" ng-show="scraped">
+                        <!-- AggregateUrl submit-->
+                        <button type="submit" class="btn btn-primary" ng-show="scraped" ng-disabled="aggregateUrl.$invalid">
                            <span data-ng-show="loading"><i class="fa fa-spinner fa-spin"></i>&nbsp;&nbsp;Scraping..</span>
                             <span data-ng-hide="loading">Scrape</span>
                         </button>
-                        <div ng-hide="scraped">
-
-                            <div id="title-group" class="form-group">
-                                <label for="url">Title</label>
-                                <textarea rows="3" name="title" id="title" class="form-control" placeholder="title" ng-model="formData.title"></textarea>
-                                <span class="help-block"></span>
+                    </form>
+                    <!-- form for submitting the data-->
+                    <form name="aggregateData" ng-hide="scraped" ng-submit="addlink(aggregateData.$valid)"novalidate>
+                           <!-- title -->
+                            <div id="title-group" class="form-group" ng-class="{'has-error':(aggregateData.title.$invalid && !aggregateData.title.$pristine)}">
+                                <label for="url">Title*</label>
+                                <textarea rows="3" name="title" id="title" class="form-control" placeholder="title" ng-model="formData.title" ng-required="true" ng-minlength="30"  required></textarea>
+                                <span ng-show="aggregateData.title.$invalid && !aggregateData.title.$pristine" class="help-block">Title is required</span>
                             </div>
-                            <div id="description-group" class="form-group" ng-hide="des_hide">
-                                <label for="url">Description</label>
-                                <textarea rows="3" name="description" id="description" class="form-control" placeholder="description" ng-model="formData.description"></textarea>
-                                <span class="help-block"></span>
+                            <!-- Description -->
+                            <div id="description-group" class="form-group" ng-hide="des_hide" ng-class="{'has-error':(aggregateData.description.$invalid && !aggregateData.description.$pristine) || aggregateData.description.$error.minlength}">
+                                <label for="url">Description*</label>
+                                <textarea rows="3" name="description" id="description" class="form-control" placeholder="description" ng-model="formData.description" ng-required="true" ng-minlength="100"  required></textarea>
+                                <span ng-show="aggregateData.description.$error.minlength" class="help-block">Description is too short</span>
                             </div>
-
+                            <!-- Tags -->
                             <div id="tag-group" class="form-group">
                                 <label for="url">Tags</label>
                                 <input type="text" rows="3" name="tags" id="tags" class="form-control" placeholder="Add theTags seperated by commas" ng-model="tags">
                                 <span class="help-block"></span>
-
                             </div>
-
-                            <button type="button" class="btn btn-primary" ng-click="addlink()" >Add
-
+                            <!-- Aggregate Data submit-->
+                            <button type="submit" class="btn btn-primary" ng-disabled="aggregateData.$invalid">Add
                             </button>
-
-                        </div>
-
+                            <span>
+                                <button class="btn btn-default" ng-click="reset(aggregateUrl,aggregateData)">Reset
+                                </button>
+                            </span>
                     </form>
 
                 </div>
+                <!-- End of modal body-->
 
             </div>
-
+            <!-- End of modal content -->
         </div>
-
+            <!-- End of modal dialog-->
     </div>
     <!-- end of modal-->
-</div>
-<div class="container-fluid" ng-show="posts.length==0">
 
+
+<!-- Default page when there is no link added-->
+<div class="container-fluid" ng-show="posts.length==0">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
         <h4>No posts found for this content<br>Press Add link on the top to add posts</h4>
         </div>
     </div>
-
 </div>
+<!-- End of DefaultPage -->
 
+
+<!-- presenting  the aggregated links from the DB-->
 <div class="container fluid" ng-show="posts.length>0">
     <div class="row">
         <div class="col-md-10" id="LinksList" ng-controller="commentsController">
-           <ul ng-repeat="post in posts| filter: query">
+           <ul ng-repeat="post in posts">
                <li>
                    <div class="panel panel-default">
                        <div class="panel-heading">
