--- a/public/test.html
+++ b/public/test.html
@@ -2,27 +2,367 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Test Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="./css/main.css">-->
+    <link rel="stylesheet" href="./admin/css/AdminLTE.min.css">
+    <!-- Custom Font awesome -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-sanitize.min.js"></script>
+
+    <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- angular-->
+    <script src="aggregation.controller.js"></script>
+    <script src="./admin/js/app.min.js"></script>
 </head>
+<style>
+    /*box styles*/
+    .box-default{
+        border-top-style: none;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    }
+    .box-default:hover {
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+    /*video styles*/
+    .video-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#428bca;
+    }
+    .description{
+        font-color:#444;
+    }
+    .video-icon{
+        color:#428bca;
+    }
+    /*image style*/
+    .image-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#FF736D;
+    }
+    .image-icon{
+       color:#FF736D;
+    }
+
+    /*audio style*/
+    .audio-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#C3CC2E;
+    }
+    .audio-icon{
+        color:#C3CC2E;
+    }
+
+    /*slide style*/
+    .slide-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#53AFFF;
+    }
+    .slide-icon{
+        color:#53AFFF;
+    }
+    /*doc style*/
+    .doc-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#CC2019;
+    }
+    .doc-icon{
+        color:#CC2019;
+    }
+    /*story style*/
+    .story-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#607F99;
+    }
+    .story-icon{
+        color:#607F99;
+    }
+
+
+    /*story style*/
+    .pdf-box{
+        border-left-style: solid;
+        border-left-width: 5px;
+        border-left-color:#1D7F78;
+    }
+    .pdf-icon{
+        color:#1D7F78;
+    }
+
+
+    /*title-styling*/
+    .title-text{
+        font-size: 18px;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        font-weight: bolder;
+    }
+    .card-action{
+        font-color:#428bca;
+    }
+    .card-action i{
+        font-size:16px;
+        font-size:2vw;
+    }
+    .icon{
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    .icon i{
+        font-size:16px;
+        font-size:2vw;
+    }
+
+    .image-wrapper{
+        background: transparent;
+        max-height: 500px;
+    }
+    .image-wrapper img{
+        max-height: 500px;
+        max-width: 100%;
+    }
+    /*responsive rules*/
+    @media (max-width:768px) {
+        .video-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#428bca;
+        }
+        .image-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#FF736D;
+        }
+        .audio-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#C3CC2E;
+        }
+        .slide-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#53AFFF;
+        }
+        .doc-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#CC2019;
+        }
+        .story-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#607F99;
+        }
+        .pdf-box{
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-left-color:#1D7F78;
+        }
+        .card-action i{
+            font-size:10px;
+            font-size:4vw;
+        }
+        .icon i{
+            font-size:10px;
+            font-size:4vw;
+        }
+
+    }
+</style>
 <body>
-
-
-
 <div class="container">
-    <img src=https://highlights-of-europe.smugmug.com style="width:100%;height:500px">
-
-
-
-
+    <!--video card-->
+    <div class="box box-default video-box">
+        <div class="box-header video-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon video-icon"><i class="fa fa-file-video-o fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >What is Node.js Exactly? - a beginners introduction to Nodejs</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o"></i>&nbsp;
+                        <i class="fa fa-times"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body video-body">
+            <div class="row">
+                <div class="video col-md-6 col-xs-11">
+                      <span class="voting"></span>
+                    <iframe src="https://www.youtube.com/embed/pU9Q6oiQNd0" width="100%" height=300px allowfullscreen></iframe>
+                </div>
+                <div class="col-md-5">
+                    <h4><b>Description</b></h4>
+                    <p class="description text-justify">
+                        What exactly is node.js?  Is it a command-line tool, a language, the same thing as Ruby on Rails, a cure for cancer?\n\nIf you\'re new to web development, it can be a bit confusing as to what exactly node.js is and to what you should do with it, and there\'s a lot of information out there...most of which seems to be tailored towards genius-level developers.\n\nSo, here\'s a node.js introduction for those who have no idea what it is.\n\nWe\'re going to cover the difference between javascript in a browser vs javascript in node.js and the common uses for node.js.\n\nTo wrap it up, we\'re going to spin up a quick web server in node.js just to show you how easy it is.\n\nNow, learn how to build an Express.js App!\nhttps://www.youtube.com/watch?v=FqMIyTH9wSg
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--image card-->
+    <div class="box box-default image-box">
+        <div class="box-header image-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon image-icon"><i class="fa fa-image fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >Testing image</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o fa-2x"></i>&nbsp;
+                        <i class="fa fa-times fa-2x"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body image-body">
+            <div class="row">
+                <div class="col-xs-11 image-wrapper">
+                    <img class="img-responsive center-block" src="http://www.bitrot.de/pictures/het_wildstrawberry.jpg" alt="Gareth Bale">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--audio card-->
+    <div class="box box-default audio-box">
+        <div class="box-header audio-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon audio-icon"><i class="fa  fa-file-audio-o fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >Testing Audio</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o fa-2x"></i>&nbsp;
+                        <i class="fa fa-times fa-2x"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body audio-body">
+            <div class="row">
+                <div class="col-xs-11 text-center audio-wrapper">
+                    <iframe width="100%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?visual=true&url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F237668695&show_artwork=true"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--slide card-->
+    <div class="box box-default slide-box">
+        <div class="box-header slide-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon slide-icon"><i class="fa  fa-slideshare fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >Testing Slides</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o fa-2x"></i>&nbsp;
+                        <i class="fa fa-times fa-2x"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body slide-body">
+            <div class="row">
+                <div class="col-xs-11 text-center slide-wrapper">
+                    <iframe src="https://www.slideshare.net/slideshow/embed_code/key/zhcqz9MY0Capqp" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--doc card-->
+    <div class="box box-default doc-box">
+        <div class="box-header doc-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon doc-icon"><i class="fa  fa-slideshare fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >Testing Docs</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o fa-2x"></i>&nbsp;
+                        <i class="fa fa-times fa-2x"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body doc-body">
+            <div class="row">
+                <div class="col-xs-11 text-center doc-wrapper">
+                    <iframe src="https://mix.office.com/embed/1otxpj7hz6kbx" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--story card-->
+    <div class="box box-default story-box">
+        <div class="box-header story-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon story-icon"><i class="fa   fa-bar-chart fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >Testing Story</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o fa-2x"></i>&nbsp;
+                        <i class="fa fa-times fa-2x"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body story-body">
+            <div class="row">
+                <div class="col-xs-11 text-center story-wrapper">
+                    <div class='verse-player-embed'><style>.verse-player-embed {position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .verse-player-embed iframe, .verse-player-embed object, .verse-player-embed embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><iframe src='https://verse.com/9c8de05799b1b1671c325b52372b39678837ea5a/299-water/' frameborder='0' allowfullscreen ></iframe></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--pdf card-->
+    <div class="box box-default pdf-box">
+        <div class="box-header pdf-header">
+            <div class="row">
+                <div class="col-xs-1 text-center icon pdf-icon"><i class="fa   fa-file-pdf-o fa-2x"></i></div>
+                <div class="col-xs-8 title-text">
+                    <span >Testing Pdf</span>
+                </div>
+                <div class="col-xs-3">
+                    <span class="card-action pull-right">
+                        <i class="fa fa-star-o fa-2x"></i>&nbsp;
+                        <i class="fa fa-times fa-2x"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="box-body pdf-body">
+            <div class="row">
+                <div class="col-xs-11 text-center pdf-wrapper">
+                    <iframe src="https://drive.google.com/viewerng/viewer?url=http://ptgmedia.pearsoncmg.com/images/9780672329166/samplepages/0672329166_Sample.pdf&embedded=true" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-
-
 </body>
 
 </body>
