--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,18 @@
     <!-- angular-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/1.1.0/toaster.min.css" rel="stylesheet" />
     <script data-require="ui-bootstrap@*" data-semver="0.12.1" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
+    <!--angular toaster-->
     <script src="https://code.angularjs.org/1.2.0/angular-animate.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/1.1.0/toaster.min.js"></script>
+    <!-- angular tags-->
+    <link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.min.css" />
+    <link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.bootstrap.min.css" />
+    <script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
+    <!--custom directives-->
     <script src="js/LinkForm/addLinkForm.js"></script>
     <script src="js/HubLink/hubPostDelete.js"></script>
     <script src="js/HubLink/hubLink.js"></script>
+    <!--main module and directive-->
     <script src="aggregation.controller.js"></script>
     <script src="./admin/js/app.min.js"></script>
 
