mongo model change and edit dialog with partial functionality

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <!--custom directives-->
     <script src="js/LinkForm/addLinkForm.js"></script>
     <script src="js/HubLink/hubPostDelete.js"></script>
+    <script src="js/HubLink/hubPostEdit.js"></script>
     <script src="js/HubLink/hubLink.js"></script>
     <!--main module and directive-->
     <script src="aggregation.controller.js"></script>
