--- a/public/test.html
+++ b/public/test.html
@@ -377,7 +377,8 @@
         <div class="box-body pdf-body">
             <div class="row">
                 <div class="col-xs-11 text-center pdf-wrapper">
-                    <iframe src="https://drive.google.com/viewerng/viewer?url=http://ptgmedia.pearsoncmg.com/images/9780672329166/samplepages/0672329166_Sample.pdf&embedded=true" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <iframe src="https://drive.google.com/viewerng/viewer?url=http://www.tutorialspoint.com/java/java_tutorial.pdf&amp;embedded=true" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                    <!--<iframe src="https://drive.google.com/viewerng/viewer?url=http://ptgmedia.pearsoncmg.com/images/9780672329166/samplepages/0672329166_Sample.pdf&embedded=true" scrolling="no" frameborder="0" width="100%" height="500" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
                 </div>
             </div>
         </div>
